// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tydligval with custom interface render component with data 1`] = `<React.Fragment />`;

exports[`tydligval with default interface render component with data 1`] = `
<React.Fragment>
  <style__Button
    onPress={[Function]}
  >
    <style__TriggerContainer>
      <style__TriggerLeft>
        <style__Text>
          Test 1
        </style__Text>
      </style__TriggerLeft>
      <style__TriggerRight>
        <ArrowDown />
      </style__TriggerRight>
    </style__TriggerContainer>
  </style__Button>
</React.Fragment>
`;

exports[`tydligval with default interface render component with no data 1`] = `null`;

exports[`tydligval with default interface renders the arrow with trigger buttons 1`] = `
<Svg
  height="10"
  preserveAspectRatio="xMidYMid meet"
  width="10"
>
  <G
    fill="#ffffff"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <G
      fill="#ffffff"
      transform="translate(-997.000000, -572.000000)"
    >
      <G
        transform="translate(997.000000, 572.000000)"
      >
        <Polygon
          points="0 0 5.21196348 6.21196348 10.9042969 0"
        />
      </G>
    </G>
  </G>
</Svg>
`;

exports[`tydligval with default interface renders the default trigger buttons 1`] = `
<style__Button
  onPress={[Function]}
>
  <style__TriggerContainer>
    <style__TriggerLeft>
      <style__Text>
        Test 1
      </style__Text>
    </style__TriggerLeft>
    <style__TriggerRight>
      <ArrowDown />
    </style__TriggerRight>
  </style__TriggerContainer>
</style__Button>
`;

exports[`tydligval with default interface renders the default trigger buttons 2`] = `
<style__Button
  onPress={[Function]}
>
  <style__Text>
    Test 1
  </style__Text>
</style__Button>
`;

exports[`tydligval with default interface renders the default trigger buttons 3`] = `
<style__CloseTrigger>
  <style__Button
    onPress={[Function]}
  >
    <CloseMe />
  </style__Button>
</style__CloseTrigger>
`;
